--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^20.11.8",
+    "autoprefixer": "^10.0.1",
     "axios": "^1.6.7",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-247738465-20240130",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0",
-    "@types/node": "^20.11.8",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
